[package]
name = "mikes_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.25.1"
rocket = "0.4.10"
rocket_okapi = "0.5.1"
url = "2.2.2"
anyhow = "1.0.44"

[dev-dependencies]
indoc = "*"
