[package]
name = "mikes_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.25.1"
rocket = "0.5.0-rc.1"
rocket_okapi = { version = "0.8.0-alpha-1", features = ["swagger"] }
url = "2.2.2"
anyhow = "1.0.44"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
reqwest = "0.11.6"

[dev-dependencies]
indoc = "*"
