[package]
name = "mikes_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.25.1"
rocket = "0.5.0-rc.1"
rocket_okapi = { version = "0.8.0-alpha-1", features = ["swagger"] }
url = "2.2.2"
anyhow = "1.0.44"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
rand = "0.8.4"
base64 = "0.13.0"
reqwest = "0.11.6"
slog = "2.7.0"
slog-term = "2.8.0"
slog-scope = "4.4.0"
slog-scope-futures = "0.1.1"
slog-stdlog = "4.1.0"
tokio-stream = "0.1.8"
mime = "0.3.16"

[dev-dependencies]
indoc = "*"
httpmock = "0.6.2"
reqwest = { version = "0.11.6", features = ["json", "blocking"]}
urlencoding = "*"
